# real-time-data-stream

./: .gitignore  README.md  main.py  pyproject.toml  stock_fetcher.py  stock_generator.py
.github/workflows/: opencode.yml
anomaly/: __init__.py  anomaly_detecter.py
database/: __init__.py  connector.py
docker/data-pipeline/: pg_hba.conf  register-cmd.txt
docker/nocodb/: docker-compose.yaml
history/: __init__.py  stock_fetcher.py  validation_mixins.py
realtime/: __init__.py  model.py  trading_tick.py
stock-data-pipeline/: docker-compose.yaml  register-pg-stock-connector.json
utils/: __init__.py  config_loader.py  logger.py  serializer.py
