[project]
name = "real-time-data-stream"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.30.0",
    "fastapi[standard]>=0.115.12",
    "numpy>=2.3.1",
    "orjson>=3.10.18",
    "uuid-utils>=0.11.0",
]

[dependency-groups]
dev = [
    "confluent-kafka>=2.10.1",
]
